add core structure of body

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title>Ceramic Life</title>
 </head>
 <body>
-    <h1>Ceramic Life </h1>
+    <header>Header content</header>
+    
+    <section>main photo</section>
+    <section>course description</section>
+    <section>time table</section>
+    <footer> social media icons and links </footer>
 </body>
 </html>
