add header structure

--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Ceramic Life</title>
+   
 </head>
 <body>
-    <header>Header content</header>
+    <header>
+    <a href="index.html">
+        <h1> Ceramic Life </h1>
+    </a>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="#">Gallery</a>
+            </li>
+            <li>
+                <a href="#">About Us</a>
+            </li>
+            <li>
+                <a href="#">Sign Up</a>
+            </li>
+        </ul>
+    </nav>
+    </header>
     
     <section>main photo</section>
     <section>course description</section>
