add style to h1, h2, logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
     <a href="index.html">
-        <h1> Ceramic Life </h1>
+        <h1 id="logo"> Ceramic Life </h1>
     </a>
     <nav>
         <ul>
