--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
         <h1 id="logo"> Ceramic Life </h1>
     </a>
     <nav>
-        <ul>
+        <ul id="menu">
             <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="#">Gallery</a>
+                <a href="#">Sign Up</a>
             </li>
             <li>
                 <a href="#">About Us</a>
             </li>
             <li>
-                <a href="#">Sign Up</a>
+                <a href="#">Gallery</a>
             </li>
+            <li>
+                <a href="index.html" class="active">Home</a>
+            </li>
+           
+           
         </ul>
     </nav>
     </header>
