style and place main image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
     </nav>
     </header>
     
-    <section>main photo</section>
+    <section id="main-image-outer">
+        <div id="main-image">
+
+        </div>
+    </section>
     <section>course description</section>
     <section>time table</section>
     <footer> social media icons and links </footer>
