add gen-information some structure

--- a/index.html
+++ b/index.html
@@ -42,8 +42,23 @@
 
         </div>
     </section>
-    <section>course description</section>
-    <section>time table</section>
+    <section id="gen-information">
+        <h1>WE'RE KNEADING OUR CREATIVITY!</h1>
+        <div id="only-div">
+<div class="only-div-class">
+<h2>Course Description</h2>
+<p> rgijrgovskif opiejrgporgijrgovskif opiejrgpoiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjeproiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjepro</p>
+</div>
+<div class="only-div-class">
+    <h2>Time Table</h2>
+    <p> rgijrgovskif opiejrgporgijrgovskif opiejrgpoiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjeproiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjepro</p>
+    </div>
+
+
+        </div>
+       
+    <section>
+     </section>
     <footer> social media icons and links </footer>
 </body>
 </html>
