--- a/about-us.html
+++ b/about-us.html
@@ -17,13 +17,13 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="about-us.html">About Us</a>
+                    <a href="about-us.html" class="active">About Us</a>
                 </li>
                 <li>
                     <a href="signup.html">Sign Up</a>
