--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery</a>
@@ -26,7 +26,7 @@
                     <a href="about-us.html">About Us</a>
                 </li>
                 <li>
-                    <a href="signup.html">Sign Up</a>
+                    <a href="signup.html" class="active">Sign Up</a>
                 </li>
             </ul>
         </nav>
