make about us work, start signup page

--- a/about-us.html
+++ b/about-us.html
@@ -31,13 +31,14 @@
             </ul>
         </nav>
     </header>
-    <section id="main-container">
-        <div class="main-content">
-            <h1>WE'RE KNEADING OUR CREATIVITY!</h1>
-            <h2>Course Description</h2>
-            <p> rgijrgovskif opiejrgporgijrgovskif opiejrgpoiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjeproiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjepro</p>
-            <h2>Time Table</h2>
-            <p> rgijrgovskif opiejrgporgijrgovskif opiejrgpoiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjeproiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjepro</p>
+    <section id="about-container">
+        <div class="about-content">
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex autem quasi alias beatae at magni debitis quas dicta nostrum assumenda necessitatibus, quis incidunt consequuntur officiis, voluptates laudantium tempore enim ratione?
+            </p>
+            <div class="contact">
+                Contact us at:
+            </div>
         </div>
     </section>
     <footer class="social-media-container">
