--- a/signup.html
+++ b/signup.html
@@ -32,9 +32,9 @@
         </nav>
     </header>
     <section id="signup-container">
+        <h1 class="signup-header">Be in our community!</h1>
         <div class="signup-content">
-            <h1>Be in our community!</h1>
-            <form id="signup-form" method="POST" action="">
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net/">
                 <div class="form-item">
                     <label class="form-label" for="name">Name:</label>
                     <input class="form-input" name="name" id="name" type="text" required/>
@@ -50,18 +50,14 @@
                 <div class="form-item">
                     <label class="form-label">Days:</label>
                     <div class="form-input">
-                        <div>
                             <label for="weekdays">Weekdays: </label>
                             <input type="radio" name="days" id="weekdays" value="weekdays" required>
-                        </div>
-                        <div>
                             <label for="weekends">Weekends: </label>
                             <input type="radio" name="days" id="weekends" value="weekends">
-                        </div>
                     </div>
                 </div>
                 <div class="form-action">
-                    <input type="submit" value="SUBMIT"/>
+                    <input type="submit" value="Submit"/>
                 </div>
             </form>
         </div>
