add responsive media queries

--- a/about-us.html
+++ b/about-us.html
@@ -33,11 +33,13 @@
     </header>
     <section id="about-container">
         <div class="about-content">
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex autem quasi alias beatae at magni debitis quas dicta nostrum assumenda necessitatibus, quis incidunt consequuntur officiis, voluptates laudantium tempore enim ratione?
-            </p>
-            <div class="contact">
-                Contact us at:
+            <div>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex autem quasi alias beatae at magni debitis quas dicta nostrum assumenda necessitatibus, quis incidunt consequuntur officiis, voluptates laudantium tempore enim ratione?
+                </p>
+            </div>
+            <div>
+                Contact us at:Contact us at:Contact us at:Contact us at:Contact us at:Contact us at:
             </div>
         </div>
     </section>
