fix accessibility issues and markup validation

--- a/gallery.html
+++ b/gallery.html
@@ -17,9 +17,6 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
                     <a href="gallery.html" class="active">Gallery</a>
                 </li>
                 <li>
@@ -33,7 +30,7 @@
     </header>
     <section id="gallery-container">
         <div class="gallery-content">
-            <h1>SCENES FROM OUR ATELIER!</h1>
+            <h2>SCENES FROM OUR ATELIER!</h2>
             <div class="gallery-images">
                 <div class="gallery-image-container"><img src="assets/images/pexels-photo-3094033.webp" alt="pexels-photo-3094033.webp" /></div>
                 <div class="gallery-image-container"><img src="assets/images/pexels-photo-3692063.jpeg" alt="pexels-photo-3692063.jpeg" /></div>
@@ -51,10 +48,10 @@
     </section>
     <footer class="social-media-container">
         <ul id="social-media-links">
-            <li><a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/" aria-label="Facebook" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com/" aria-label="Twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com/" aria-label="Youtube" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com/" aria-label="Instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </footer>
     <script src="https://kit.fontawesome.com/e080788e0b.js" crossorigin="anonymous"></script>
