--- a/about-us.html
+++ b/about-us.html
@@ -17,9 +17,6 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
@@ -34,6 +31,7 @@
     <section id="about-container">
         <div class="about-content">
             <div>
+                <h2>About Us</h2>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex autem quasi alias beatae at magni debitis quas dicta nostrum assumenda necessitatibus, quis incidunt consequuntur officiis, voluptates laudantium tempore enim ratione?
                 </p>
@@ -45,10 +43,10 @@
     </section>
     <footer class="social-media-container">
         <ul id="social-media-links">
-            <li><a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/" aria-label="Facebook" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com/" aria-label="Twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com/" aria-label="Youtube" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com/" aria-label="Instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </footer>
     <script src="https://kit.fontawesome.com/e080788e0b.js" crossorigin="anonymous"></script>
