--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html" class="active">Home</a>
-                </li>
-                <li>
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
@@ -33,19 +30,19 @@
     </header>
     <section id="main-container">
         <div class="main-content">
-            <h1>WE'RE KNEADING OUR CREATIVITY!</h1>
-            <h2>Course Description</h2>
+            <h2>WE'RE KNEADING OUR CREATIVITY!</h2>
+            <h3>Course Description</h3>
             <p> rgijrgovskif opiejrgporgijrgovskif opiejrgpoiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjeproiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjepro</p>
-            <h2>Time Table</h2>
+            <h3>Time Table</h3>
             <p> rgijrgovskif opiejrgporgijrgovskif opiejrgpoiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjeproiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjepro</p>
         </div>
     </section>
     <footer class="social-media-container">
         <ul id="social-media-links">
-            <li><a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/" aria-label="Facebook" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com/" aria-label="Twitter" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com/" aria-label="Youtube" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com/" aria-label="Instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </footer>
     <script src="https://kit.fontawesome.com/e080788e0b.js" crossorigin="anonymous"></script>
