change the color of about-us content and sign-up header

--- a/about-us.html
+++ b/about-us.html
@@ -33,11 +33,11 @@
             <div>
                 <h2>About Us</h2>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex autem quasi alias beatae at magni debitis quas dicta nostrum assumenda necessitatibus, quis incidunt consequuntur officiis, voluptates laudantium tempore enim ratione?
+                  We are two sisters who are both ceramic artists. After we finish our university education, we realized that all we want was to have a place of our own and spend creativity time with the ones who share the same interest. You are more than welcome to join us anytime you want.  
                 </p>
             </div>
             <div>
-                Contact us at:Contact us at:Contact us at:Contact us at:Contact us at:Contact us at:
+                Contact us by e-mail: ceramicworkshop@ceramiclife.com
             </div>
         </div>
     </section>
