--- a/index.html
+++ b/index.html
@@ -31,10 +31,21 @@
     <section id="main-container">
         <div class="main-content">
             <h2>WE'RE KNEADING OUR CREATIVITY!</h2>
-            <h3>Course Description</h3>
-            <p> rgijrgovskif opiejrgporgijrgovskif opiejrgpoiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjeproiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjepro</p>
+            <h3>Ceramic Workshop</h3>
+            <p> Are you ready to spend fun and creative hours with us? You will be able to make your own ceramics under the guidance of an instructor without any prior experience. If you decide to continue with your ambition, you will be able access more advanced and instructured courses.</p>
             <h3>Time Table</h3>
-            <p> rgijrgovskif opiejrgporgijrgovskif opiejrgpoiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjeproiwerjpo peorigjpeorigjepo poirgjpeorijperoji eorigjepro</p>
+            <p> 
+                <ul>
+                    <li>
+                        Weekdays: 18:00-20:00
+        
+                    </li>
+                    <li>
+                        Weekends: 12:00-14:00
+        
+                    </li>
+                </ul>
+            </p>
         </div>
     </section>
     <footer class="social-media-container">
