add new photos to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -32,17 +32,22 @@
         <div class="gallery-content">
             <h2>SCENES FROM OUR ATELIER!</h2>
             <div class="gallery-images">
-                <div class="gallery-image-container"><img src="assets/images/pexels-photo-3094033.webp" alt="pexels-photo-3094033.webp" /></div>
-                <div class="gallery-image-container"><img src="assets/images/pexels-photo-3692063.jpeg" alt="pexels-photo-3692063.jpeg" /></div>
-                <div class="gallery-image-container"><img src="assets/images/pexels-photo-6611175.webp" alt="pexels-photo-6611175.webp" /></div>
-                <div class="gallery-image-container"><img src="assets/images/pexels-photo-6611373.jpeg" alt="pexels-photo-6611373.jpeg" /></div>
-                <div class="gallery-image-container"><img src="assets/images/pexels-photo-6611419.jpeg" alt="pexels-photo-6611419.jpeg" /></div>
-                <div class="gallery-image-container"><img src="assets/images/pexels-photo-6694312.jpeg" alt="pexels-photo-6694312.jpeg" /></div>
-                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9733006.jpeg" alt="pexels-photo-9733006.jpeg" /></div>
-                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9733315.jpeg" alt="pexels-photo-9733315.jpeg" /></div>
-                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9736505.jpeg" alt="pexels-photo-9736505.jpeg" /></div>
-                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9736532.jpeg" alt="pexels-photo-9736532.jpeg" /></div>
-                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9736891.jpeg" alt="pexels-photo-9736891.jpeg" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-3094033.webp" alt="ceramic creamers on shelf" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-3692063.jpeg" alt="ceramic pots photo" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-6611175.webp" alt="uncooked ceramic dough" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-6611373.jpeg" alt="uncooked ceramic coffee cup" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-6611419.jpeg" alt="ceramic soup bowls on shelf" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-6694312.jpeg" alt="hands of two people working on the same ceramic" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9733006.jpeg" alt="ceramic notes on paper attached to the shelf" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9733315.jpeg" alt="ceramic shelf for student works " /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9736505.jpeg" alt="working students woman and man" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9736532.jpeg" alt="jeweliries made of ceramic dough" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9736891.jpeg" alt="woman working on ceramic pot" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-3277951.webp" alt="ceramic mug filled with coffee" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-3817500.webp" alt="woman drawing yellow circle on an uncooked ceramic piece" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9304570.webp" alt="finished ceramic piece with leaf drawings" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-9850116.webp" alt="ceramic vase with a dry plant in it" /></div>
+                <div class="gallery-image-container"><img src="assets/images/pexels-photo-10970680.jpeg" alt="ceramic nose work" /></div>
             </div>
         </div>
     </section>
