start writing readme and fix small visual issues

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p> Are you ready to spend fun and creative hours with us? You will be able to make your own ceramics under the guidance of an instructor without any prior experience. If you decide to continue with your ambition, you will be able access more advanced and instructured courses.</p>
             <h3>Time Table</h3>
             <p> 
-                <ul>
+                <ul id="timetable">
                     <li>
                         Weekdays: 18:00-20:00
         
